Rename JS assets and add descriptive headers

--- a/index.html
+++ b/index.html
@@ -831,9 +831,9 @@
     <img id="review-photo-modal-img" alt="" loading="lazy">
 </div>
 
-<script src="js/script1.js"></script>
+<script src="js/portfolio-core.js"></script>
 
-<script src="js/script2.js"></script>
+<script src="js/filters-and-refs.js"></script>
 
 <div id="toast-notification">Лучше выбрать 2-3 примера, этого достаточно</div>
        <div id="verified-tooltip" style="display:none; position:absolute; background:#19191a; border:1px solid rgba(255,255,255,0.1); padding:16px; border-radius:12px; width:260px; box-shadow:0 10px 40px rgba(0,0,0,0.8); z-index:10060; text-align:left; pointer-events:none;">
@@ -842,14 +842,14 @@
             <div style="position:absolute; bottom:-6px; left:20px; width:12px; height:12px; background:#19191a; transform:rotate(45deg); border-bottom:1px solid rgba(255,255,255,0.1); border-right:1px solid rgba(255,255,255,0.1);"></div>
        </div>
     
-<script src="js/script3.js"></script>
+<script src="js/portfolio-enhancements.js"></script>
 
-<script src="js/script4.js"></script>
+<script src="js/notifications-modal.js"></script>
 
 
-<script src="js/script5.js"></script>
-<script src="js/script6.js"></script>
+<script src="js/placeholder-images.js"></script>
+<script src="js/tooltip-positioning.js"></script>
 
-<script src="js/script7.js"></script>
+<script src="js/tab-switching.js"></script>
 </body>
 </html>
